# text-mining-cientistas-sociais

./: .buildinfo  .gitignore  Capitulo_1.html  Capitulo_1.ipynb  Capitulo_2.html  Capitulo_2.ipynb  Capitulo_3.html  Capitulo_3.ipynb  Capitulo_4.html  Capitulo_4.ipynb  Capitulo_5.html  Capitulo_5.ipynb  Capitulo_6.html  Capitulo_6.ipynb  Capítulo 4.ipynb  README.html  README.md  _config.yml  _toc.yml  assemble.py  base_config.cfg  build.sh  deprecated.html  dhbbmining.py  genindex.html  intro.html  intro.md  memoir.tplx  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
Book/: Capitulo_1.ipynb  Capitulo_3.ipynb  Capitulo_5.ipynb  Capitulo_6.ipynb  _config.yml  articles.d2v  articles.ft  articles.txt  config.cfg  deprecated.ipynb  fetch2pgsql.py  fetch2sql.py  intro.md  pubmed.sqlite
_sources/: Capitulo_1.ipynb  Capitulo_2.ipynb  Capitulo_3.ipynb  Capitulo_4.ipynb  Capitulo_5.ipynb  Capitulo_6.ipynb  README.md
dhbb/rules/: exceptions.txt  regras.txt
dhbb_nlp/: meta.json  tokenizer
dhbb_nlp/ner/: cfg  model  moves
dhbb_nlp/parser/: cfg  model  moves
dhbb_nlp/tagger/: tag_map
dhbb_nlp/vocab/: strings.json
glossarios/: Movimentos_partidos_politicos_e_sindicatos.txt
