[tool.poetry]
name = "text-mining-cientistas-sociais"
version = "0.1.0"
description = "Jupyter book"
authors = ["Flavio Codeço Coelho <fccoelho@gmail.com>"]
license = "GPL-v3"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
nltk = "^3.8.1"
spacy = "^3.7.1"
gensim = "^4.3.2"
scikit-learn = "^1.3.1"
pandas = "^2.1.1"
sqlitedict = "^2.1.0"
pygraphviz = "^1.11"
pyemd = "^1.0.0"
tqdm = "^4.66.1"
biopython = "^1.81"
ratelimiter = "^1.2.0.post0"
click = "^8.1.7"
scholarly = "^1.7.11"
matplotlib = "^3.8.0"
whoosh = "^2.7.4"
ipywidgets = "^8.1.1"
networkx = "^3.1"
plotly = "^5.17.0"
pot = "^0.9.1"


[tool.poetry.group.dev.dependencies]
jupyter-book = "^0.15.1"
ghp-import = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
